--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -75,3 +75,13 @@ table {
         }
     }
 }
+
+#chat {
+    height: 500px;
+
+    #chat-container {
+        img {
+            max-width: 50%;
+        }
+    }
+}
